kubernetes/app-deployment.yml
#app deployment file
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-app
  labels:
    app: voting-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: voting-app
  template:
    metadata:
      labels:
        app: voting-app
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        runAsNonRoot: true

      containers:
        - name: voting-app
          image: edidiongakpan18/voting-app:129bd073becdb775002e8dc593a4867f63a72b3a
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "400m"
              memory: "400Mi"
            limits:
              cpu: "500m"
              memory: "500Mi"
              #startupProbe:
              #tcpSocket:
              #port: 8080
              #periodSeconds: 10
              #timeoutSeconds: 5
              #failureThreshold: 3
